# zotq

./: .gitignore  AGENTS.md  DESIGN.md  README.md  TODO.md  config.fastembed.toml  pyproject.toml
benchmarks/: 2026-03-12-fastembed-local-api-baseline.md
src/zotq/: __init__.py  bibtex_parser.py  cli.py  client.py  config.py  contracts.py  errors.py  factory.py  index_service.py  models.py  output.py  query_engine.py
src/zotq/embeddings/: __init__.py  base.py  external_providers.py  factory.py  local_provider.py  portable_provider.py
src/zotq/pipeline/: __init__.py  (+3 more)
tests/: test_agentic_error_envelope.py  test_agentic_non_interactive.py  test_agentic_preflight.py  test_bibliography_batching.py  test_bibtex_parser.py  test_citation_key_resolution.py  test_cli_commands.py  test_cli_contract_model.py  test_cli_e2e_http.py  test_client_mock_integration.py  test_config_precedence.py  test_dependency_smoke.py  test_embedding_provider.py  test_embedding_provider_http.py  test_http_adapter_contract.py  test_hybrid_calibration.py  test_index_citation_key_enrichment.py  test_index_progress.py  test_index_service_persistence.py  test_index_service_semantic.py  test_item_multi_key.py  test_lexical_index_ranking.py  test_local_api_adapter.py  test_normalize.py  test_output_table.py  test_query_contracts.py  test_remote_api_adapter.py  test_search_backend_selection.py  test_semantic_offline_guards.py  test_snapshot_bibtex_adapter.py  test_snapshot_mode_config.py  test_snapshot_mode_contract.py  test_vector_backend_parity.py  test_vector_index.py  test_vector_migration.py
(+12 files in other folders)
