[project]
name = "zotq"
version = "0.1.0"
description = "Zotero query CLI with local/remote adapters and hybrid search modes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "rich>=13.7.1",
]

[project.scripts]
zotq = "zotq.cli:main"
zotquery = "zotq.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotq"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
]
