[project]
name = "zotq"
version = "0.1.0"
description = "Zotero query CLI with local/remote adapters and hybrid search modes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bibtexparser>=1.4.3",
  "click>=8.1.7",
  "fastembed==0.3.6",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "rich>=13.7.1",
  "sqlite-vec>=0.1.6",
]

[project.scripts]
zotq = "zotq.cli:main"
zotquery = "zotq.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "respx>=0.22.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotq"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
]
